--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^0.14.0",
     "@astrojs/prefetch": "^0.1.1",
     "@astrojs/react": "^2.0.0",
+    "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
     "@types/react": "^18.0.27",
