--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/basics",
+  "name": "edvinlinden.se",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -11,17 +11,18 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@aptabase/web": "^0.4.3",
     "@astrojs/mdx": "^0.14.0",
     "@astrojs/prefetch": "^0.1.1",
     "@astrojs/react": "^2.0.0",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/tailwind": "^5.1.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "astro": "^4.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.4.15"
   }
 }
