--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@astrojs/react": "^4.2.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.5",
+    "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "astro": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^4.0.3"
   }
 }
